Fix bug when scrolling on mobile
When scrolling on mobile, the navigation bar would come and go, making the background height (measured in vh) change and producing a 'jump' on the page.

Therefore, I changed the background height on screens with width smaller than 750px to a fixed value, not dependent on the viewport size.
For screens bigger than that is stays the same.

--- a/css/master.css
+++ b/css/master.css
@@ -123,7 +123,7 @@ ul {
   background-repeat: no-repeat;
   background-size: cover;
   color: #fff;
-  height: 100vh;
+  height: 30rem;
   margin: 0;
 }
 
@@ -179,6 +179,10 @@ ul {
     display: none;
   }
 
+  #home {
+    height: 100vh;
+  }
+  
   .home-upper {
     font-size: 4rem;
   }
